# classification_agent

./: .gitignore  README.md  balanced_saas_data.csv  pyproject.toml
classification_agent/agents/: categorical_feature_agent.py  data_splitting_agent.py  leakage_detection_agent.py  mapping_agent.py  model_selection_agent.py  model_training_agent.py
classification_agent/config/: model_config.py  prompt_config.json
classification_agent/examples/orchestrators/: step5_model_training.py
examples/: main_app.py
examples/data/: saas_timeseries_data_highcorr.csv
examples/orchestrators/: step2_validation.py  step3_preprocessing.py  step4_splitting.py  step5_model_training.py
examples/views/: streamlit_views.py
